0025204: Visualization, PrsMgr_PresentationManager::Presentation() - do not return last presentation when requested one is not found